samples/_failures_safe/1761445677_5ca577_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_784c6d1c.c: In function ‘main’:
./samples/SAFE/__tmp_784c6d1c.c:148:9: error: expected declaration or statement at end of input
  148 |         if (strlen(keyword) > 0) {
      |         ^~
./samples/SAFE/__tmp_784c6d1c.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_784c6d1c.c:148:9: error: expected declaration or statement at end of input
